--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>根岸 颯 - 履歴書</title>
     <link
       rel="stylesheet"
-      href="resume.css"
+      href="index.css"
     />
   </head>
   <body>
